# AHS_Agentic

./: .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_OLD.md  SECURITY.md  VISION.md  cost_report.json  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml  python-app.yml  release.yml
benchmarks/: baseline_metrics.json  benchmark_memory.py  benchmark_retrieval.py
docker/: Dockerfile  docker-compose.yml
docs/: ORCHESTRATOR.md  api-reference.md  architecture-deep-dive.md  examples.md  getting-started.md  index.html  index.md  orchestration-example.md  performance.md
examples/: basic_usage.py  cost_tracking_demo.py  forensic_reconciliation.py  multi_document_analysis.py  regulatory_compliance.py  resilience_demo.py
src/ahs_agentic/: __init__.py
src/ahs_agentic/agents/: __init__.py  hypergraph_agent.py
src/ahs_agentic/core/: __init__.py  retrieval.py  skeptic.py
src/ahs_agentic/graph/: __init__.py  hyper_graph.py
src/ahs_agentic/memory/: __init__.py  latent_layer.py
src/ahs_agentic/orchestrator/: __init__.py
src/ahs_agentic/utils/: __init__.py  cost_tracker.py  metrics.py  safety_check.py
tests/: conftest.py  test_cost_tracker.py  test_latent_memory.py  test_retrieval.py  test_safety_check.py  test_skeptic.py
